# paymail-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: client.rs
src/: client.rs  errors.rs  lib.rs  models.rs  resolver.rs  server.rs  utils.rs
src/protocols/: address_resolution.rs  mod rs  mod.rs  p2p.rs  pki.rs
tests/: integration.rs
