[package]
name = "paymail-rs"
version = "0.1.0"
edition = "2024"
description = "A fast, asynchronous Rust library for the BSV PayMail protocol"
license = "Open BSV"
repository = "https://github.com/murphsicles/paymail-rs"
authors = ["Dr. Roy Murphy"]

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
trust-dns-resolver = "0.23.2"
chrono = "0.4.38"
async-mutex = "1.4.1"
sv = { git = "https://github.com/murphsicles/rust-sv.git", tag = "v0.4.3" }
base64 = "0.22.1"
hex = "0.4.3"
async-trait = "0.1.81"
serde_json = "1.0.128"
ring = "0.17.14"
secp256k1 = { version = "0.31.1", features = ["recovery"] }
thiserror = "2.0.12"

[dev-dependencies]
wiremock = "0.6.3"
criterion = { version = "0.6.0", features = ["async_tokio"] }
mockall = "0.12.1"
